# robotic-tools

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  _typos.toml  download_test_mcap.sh  pyproject.toml  pytest.ini  ruff.toml
digitalis/: README.md  pyproject.toml
digitalis/src/digitalis/: _runtime.py  app.py  app.tcss  transforms.py  turbo.py  utilities.py
digitalis/tests/: test_imports.py  test_plot_paths.py
fox-bridge/: gstreamer-reference.md  pyproject.toml
fox-bridge/src/fox_bridge/: __init__.py  __main__.py  proxy.py  schemas.py
mcap-codec-support/: README.md  pyproject.toml
mcap-codec-support/src/mcap_codec_support/: __init__.py  _messages.py  _protocols.py  _schemas.py  decoders.py
mcap-codec-support/tests/: check_optional_dependencies.py  test_decompress.py  test_gstreamer.py  test_ivf_parser.py  test_optional_dependencies.py  test_preprocess.py  test_subprocess_encoder.py  test_video_encoder.py  test_video_file_writer.py
mcap-ros2-support-fast/: README.md  pyproject.toml
mcap-ros2-support-fast/scripts/: bench_split_decode.py  generate_code.py  show_generated_code.py
mcap-ros2-support-fast/src/mcap_ros2_support_fast/: __init__.py  _cdr.py  _dynamic.py  _dynamic_codegen.py  _dynamic_decoder.py  _dynamic_encoder.py  _planner.py  _plans.py  code_writer.py  decoder.py  writer.py
mcap-ros2-support-fast/tests/: generate.py  test_benchmark.py  test_bug_fixes.py  test_byte_array_round_trip.py  test_cdr_reader.py  test_cdr_writer.py  test_get_fields_and_field_types.py  test_input_types.py  test_message_constants.py  test_message_reader.py  test_micro_benchmark.py  test_numpy_input.py  test_planner.py  test_pointcloud2_serialization.py  test_ros2_decoder.py  test_ros2_writer.py
pointcloud2/: .pre-commit-config.yaml  pyproject.toml
pointcloud2/src/pointcloud2/: __init__.py  messages.py
pointcloud2/test/: __init__.py
pointcloud2/tests/: test_dtype_functions.py  test_pointcloud_functions.py  test_pointfield.py
pureini/: pyproject.toml
pureini/benchmarks/: __init__.py  benchmark_encoders.py
pureini/examples/: compare_compression.py  ros2compress_cmd.py
pureini/src/pureini/: __init__.py  decoder.py  encoder.py  encoding_utils.py  header.py  jit_codec.py  types.py
pureini/tests/: __init__.py  test_encoding_none.py  test_encoding_utils.py  test_field_encoders.py  test_header.py
pymcap-cli/: README.md  jsonschema-gentypes.yaml  mcap_processor.md  pyproject.toml
pymcap-cli/examples/check/: nuscenes.yaml
pymcap-cli/schemas/: mcap_check_spec.json  mcap_info.json
pymcap-cli/src/pymcap_cli/: autocompletion.py  check.py  cli.py  constants.py  debug_wrapper.py  display_utils.py  doctor.py  encoder_common.py  http_utils.py  image_utils.py  info_types.py  input_handler.py  log_setup.py  mcap_data.py  mcap_processor.py  msg_resolver.py  osc_utils.py  processors.py  reader.py  rebuild.py  rihs01.py  subprocess_encoder.py  types.py  types_manual.py  utils.py  writer.py
pymcap-cli/tests/: _ffmpeg_setup.py  check_optional_dependencies.py  conftest.py  helpers.py  test_adaptive.py  test_add.py  test_arg_constraints.py  test_arrow_schema.py  test_bridge_call.py  test_bridge_check.py  test_bridge_cmd.py  test_bridge_delay.py  test_bridge_fetch.py  test_bridge_library.py  test_bridge_params.py  test_bridge_playback.py  test_bridge_proxy.py  test_bridge_pub.py  test_bridge_serve.py  test_bump_script.py  test_cat_enum_display.py  test_cat_grep.py  test_channel_merge.py  test_check.py  test_check_spec_schema.py  test_chunk_copy_remap.py  test_chunk_groupers.py  test_cli_compression_validation.py  test_cli_cross_arg_constraints.py  test_cli_help_on_error.py  test_cli_optional_deps.py  test_command_overwrite_policies.py  test_compress_inplace.py  test_compress_level.py  test_convert_empty_inputs.py  test_decompress.py  test_dedup.py  test_delete_source.py  test_diagnostics.py  test_diff_cmd.py  (+82 more)
pymcap-cli/tests/benchmark/: test_check_performance.py  test_chunk_revalidate_vs_recompress.py  test_duplicates_performance.py  test_index_current_file_performance.py  test_performance.py
pymcap-cli/tests/e2e/: conftest.py  test_bag2mcap.py  test_bridge_cmd.py  test_cat.py  test_check.py  test_compress.py  test_diag.py  test_doctor.py  test_filter.py  test_get.py  test_info.py  test_plot.py  test_recover.py  test_roscompress.py  test_split.py  test_tf_export.py  test_topic_alias_pipeline.py  test_video.py
pymcap-cli/tests/fixtures/: bag_generator.py  diag_mcap_generator.py  image_mcap_generator.py  mcap_generator.py
pymcap-cli/vhs/: cat-query-light.tape  cat-query.tape  generate.sh  info-light.tape  info-tree-light.tape  info-tree.tape  info.tape  tftree-light.tape  tftree.tape
pymcap-cli/vhs/base/: cat-query.tape  info-tree.tape  info.tape  tftree.tape
robo-ws-bridge/: README.md  foxglove_websocket_protocol_v1.md  pyproject.toml
robo-ws-bridge/example/: client.py
robo-ws-bridge/src/robo_ws_bridge/: __init__.py  client.py  server.py  ws_types.py
robo-ws-bridge/tests/: __init__.py  test_client.py  test_server.py
ros-parser/: README.md  _generate_standalone.py  pyproject.toml
ros-parser/src/ros_parser/: __init__.py  _utils.py  (+5 more)
ros-parser/tests/: __init__.py  test_basic_types.py  test_message_path.py  test_ros2_advanced.py  test_utils.py  test_validator.py
small-mcap/: README.md  pyproject.toml  pytest.ini
small-mcap/tests/: __init__.py  check_optional_dependencies.py  conftest.py  test_benchmark.py  test_chunk_filtering.py  test_conformance.py  test_data.py  test_decompress.py  test_edge_cases.py  test_integration.py  test_mcap_compat.py  test_mcap_file.py  test_message_index_codec.py  test_optional_dependencies.py  test_read_decoded.py  test_reader_errors.py  test_reader_prefetch.py  test_rebuild.py  test_remapper.py  test_seeking_unchunked.py  test_time_filtering.py  test_writer.py
websocket-bridge/: README.md  foxglove_websocket_protocol_v1.md  pyproject.toml
websocket-bridge/example/: client.py
websocket-proxy/: README.md  pyproject.toml
websocket-proxy/example/: __init__.py  mcap_to_server.py
(+430 files in other folders)
