[project]
name = "robotic-tools"
version = "0.1.0"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "jsonschema-gentypes>=2.12.0",
    "pyinstrument>=5.1.1",
    "pytest>=8.4.2",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=7.0.0",
    "ty>=0.0.19",
]


[tool.uv.workspace]
members = [
    "digitalis",
    "mcap-ros2-support-fast",
    "pointcloud2",
    "pureini",
    "pymcap-cli",
    "small-mcap",
    "websocket-proxy",
    "robo-ws-bridge",
    "ros-parser",
]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
exclude = [
    "**/tests/",
    "**/example/",
    "**/data/",
    "**/_standalone*.py",
    "**/_lark_standalone*.py",
]

[tool.ty.analysis]
allowed-unresolved-imports = ["lz4", "lz4.frame", "lz4.block", "av", "foxglove"]

[tool.ty.terminal]
error-on-warning = true

# ty can't narrow ClassVar-based discriminated unions (step.type == ActionType.X)
[[tool.ty.overrides]]
include = [
    "mcap-ros2-support-fast/src/mcap_ros2_support_fast/_dynamic_decoder.py",
    "mcap-ros2-support-fast/src/mcap_ros2_support_fast/_dynamic_encoder.py",
    "mcap-ros2-support-fast/src/mcap_ros2_support_fast/_planner.py",
]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

# av (PyAV) has incomplete type stubs
[[tool.ty.overrides]]
include = [
    "pymcap-cli/src/pymcap_cli/encoding/decompress.py",
    "pymcap-cli/src/pymcap_cli/encoding/video_pyav.py",
    "pymcap-cli/src/pymcap_cli/encoding/video_ffmpeg.py",
    "pymcap-cli/src/pymcap_cli/encoding/video_factory.py",
    "pymcap-cli/src/pymcap_cli/cmd/rosdecompress_cmd.py",
    "pymcap-cli/src/pymcap_cli/cmd/roscompress_cmd.py",
]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
call-non-callable = "ignore"
invalid-argument-type = "ignore"


[tool.coverage.run]
omit = [
    # Auto-generated Lark parser runtime (~2154 stmts)
    "ros-parser/src/ros_parser/_lark_standalone_runtime.py",
    # Auto-generated TypedDicts from JSON schema
    "pymcap-cli/src/pymcap_cli/info_types.py",
]

[tool.ruff]
required-version = ">=0.8.0"
line-length = 100

src = ['src']

target-version = 'py310'


[tool.ruff.lint]
exclude = ['msgs']
select = ['ALL']

ignore = [
    'ANN401',  # dynamically-typed-expression
    'C901',    # complex-structure
    'D',       # pydocstyle
    'EM101',   # raw-string-in-exception
    'EM102',   # f-string-in-exception
    'FIX002',  # TODO
    'PLR2004', # MagicValueComparisons
    'S101',    # AssertUsed
    'TD',      # TODO
    'TID252',  # relative-imports (allow relative imports from parent modules)
    'TRY003',  # raise-vanilla-args

    # formatter
    'COM812', # missing-trailing-comma
    'ISC001', # single-line-implicit-string-concatenation

    # TODO: reduce this
    'FBT001',
    'FBT002',
    'A002',
    'FBT003',
    'ERA001',
    'LOG015',
    'G004',
    'DTZ006',
    'PLR0',
    'PERF203',
]


[tool.ruff.lint.per-file-ignores]
# Relaxed lints for test files
"*/tests/*" = ["T201", "SLF001", "ANN", "PTH123", "S603", "S607"]
"*/benchmarks/*" = ["T201", "INP001", "PLC0415", "PTH123"]
"*/examples/*" = ["T201", "INP001", "BLE001"]
# Typer commands - function call in defaults is required pattern
"*/cmd/*_cmd.py" = ["B008", "B904", "TC003"]
