[project]
name = "robotic-tools"
version = "0.1.0"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "import-linter>=2.11",
    "jsonschema-gentypes>=2.13.0",
    "portable-ffmpeg>=0.2.0",
    "pyinstrument>=5.1.2",
    "pytest>=9.1.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "ty>=0.0.49",
]


[tool.uv.workspace]
members = [
    "digitalis",
    "mcap-codec-support",
    "mcap-ros2-support-fast",
    "pointcloud2",
    "pureini",
    "pymcap-cli",
    "small-mcap",
    "websocket-proxy",
    "robo-ws-bridge",
    "ros-parser",
]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
exclude = [
    "**/tests/",
    "**/example/",
    "**/data/",
    "**/_standalone*.py",
    "**/_lark_standalone*.py",
]

[tool.ty.analysis]
# `compression.zstd` is the Python 3.14 stdlib zstd module; on the 3.10 target it's
# unresolvable, but runtime falls back to the `zstandard` package via try/except.
allowed-unresolved-imports = [
    "lz4",
    "lz4.frame",
    "lz4.block",
    "av",
    "foxglove",
    "DracoPy",
    "compression",
]

[tool.ty.terminal]
error-on-warning = true

# ty can't narrow ClassVar-based discriminated unions (step.type == ActionType.X)
[[tool.ty.overrides]]
include = [
    "mcap-ros2-support-fast/src/mcap_ros2_support_fast/_dynamic_decoder.py",
    "mcap-ros2-support-fast/src/mcap_ros2_support_fast/_dynamic_encoder.py",
    "mcap-ros2-support-fast/src/mcap_ros2_support_fast/_planner.py",
]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

# av (PyAV) has incomplete type stubs
[[tool.ty.overrides]]
include = [
    "mcap-codec-support/src/mcap_codec_support/video/compression.py",
    "mcap-codec-support/src/mcap_codec_support/video/factories.py",
    "mcap-codec-support/src/mcap_codec_support/video/ffmpeg.py",
    "mcap-codec-support/src/mcap_codec_support/video/pyav.py",
    "pymcap-cli/src/pymcap_cli/cmd/rosdecompress_cmd.py",
    "pymcap-cli/src/pymcap_cli/cmd/roscompress_cmd.py",
    "pymcap-cli/src/pymcap_cli/exporters/video_file_writer.py",
]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
call-non-callable = "ignore"
invalid-argument-type = "ignore"


[tool.coverage.run]
omit = [
    # Auto-generated Lark parser runtime (~2154 stmts)
    "ros-parser/src/ros_parser/_lark_standalone_runtime.py",
    # Auto-generated TypedDicts from JSON schema
    "pymcap-cli/src/pymcap_cli/types/info_types.py",
]

[tool.importlinter]
# The contracts guard runtime coupling; `if TYPE_CHECKING:` imports are
# annotation-only and don't require the target package at runtime.
exclude_type_checking_imports = true
root_packages = [
    "digitalis",
    "mcap_codec_support",
    "mcap_ros2_support_fast",
    "pointcloud2",
    "pureini",
    "pymcap_cli",
    "robo_ws_bridge",
    "ros_parser",
    "small_mcap",
    "websocket_proxy",
]

[[tool.importlinter.contracts]]
name = "Workspace boundaries"
type = "independence"
modules = [
    "digitalis",
    "mcap_codec_support",
    "mcap_ros2_support_fast",
    "pointcloud2",
    "pureini",
    "pymcap_cli",
    "robo_ws_bridge",
    "ros_parser",
    "small_mcap",
    "websocket_proxy",
]
unmatched_ignore_imports_alerting = "none"
# `**` matches one+ components, so each allowed edge needs both bare and `.**` forms.
ignore_imports = [
    # ros_parser is whitelisted at the submodule level — `ros1_msg` and the
    # private `_utils` / `_lark_standalone_runtime` stay off-limits.
    "mcap_ros2_support_fast.** -> ros_parser",
    "mcap_ros2_support_fast.** -> ros_parser.models",
    "mcap_ros2_support_fast.** -> ros_parser.ros2_msg",
    "mcap_codec_support.** -> mcap_ros2_support_fast",
    "mcap_codec_support.** -> mcap_ros2_support_fast.**",
    "mcap_codec_support.** -> small_mcap",
    "mcap_codec_support.** -> small_mcap.**",
    "mcap_codec_support.pointcloud.** -> pureini",
    "mcap_codec_support.pointcloud.** -> pureini.**",
    "mcap_codec_support.pointcloud.** -> pointcloud2",
    "pymcap_cli.** -> small_mcap",
    "pymcap_cli.** -> small_mcap.**",
    "pymcap_cli.** -> mcap_codec_support",
    "pymcap_cli.** -> mcap_codec_support.**",
    "pymcap_cli.** -> mcap_ros2_support_fast",
    "pymcap_cli.** -> mcap_ros2_support_fast.**",
    "pymcap_cli.** -> ros_parser",
    "pymcap_cli.** -> ros_parser.models",
    "pymcap_cli.** -> ros_parser.message_path",
    "pymcap_cli.** -> ros_parser.ros2_msg",
    "pymcap_cli.** -> robo_ws_bridge",
    "pymcap_cli.** -> robo_ws_bridge.**",
    "digitalis.** -> small_mcap",
    "digitalis.** -> small_mcap.**",
    "digitalis.** -> mcap_ros2_support_fast",
    "digitalis.** -> mcap_ros2_support_fast.**",
    "digitalis.** -> ros_parser.message_path",
    "digitalis.** -> pointcloud2",
    "digitalis.** -> robo_ws_bridge",
    "digitalis.** -> robo_ws_bridge.**",
    "websocket_proxy.** -> mcap_codec_support",
    "websocket_proxy.** -> mcap_codec_support.**",
    "websocket_proxy.** -> mcap_ros2_support_fast",
    "websocket_proxy.** -> mcap_ros2_support_fast.**",
    "websocket_proxy.** -> robo_ws_bridge",
    "websocket_proxy.** -> robo_ws_bridge.**",
]

[[tool.importlinter.contracts]]
name = "pymcap_cli layers"
type = "layers"
containers = ["pymcap_cli"]
layers = [
    "cli",
    "cmd",
    "exporters",
    "core",
    "display",
    "encoding | types | rosbag_reader",
]
# `core` sits above `display` because core.mcap_transform uses display.osc_utils.
# These render helpers legitimately consume core domain types the other way, so the
# two edges can't both be satisfied by ordering; whitelist the render-side imports.
ignore_imports = [
    "pymcap_cli.display.tf_render -> pymcap_cli.core.tf_tree",
    "pymcap_cli.display.tf_render -> pymcap_cli.core.tf_findings",
    "pymcap_cli.display.diag_render -> pymcap_cli.core.diagnostics",
]

[[tool.importlinter.contracts]]
name = "mcap_codec_support features independent"
type = "independence"
modules = [
    "mcap_codec_support.video",
    "mcap_codec_support.pointcloud",
]

[[tool.importlinter.contracts]]
name = "ros_parser features independent"
type = "independence"
modules = [
    "ros_parser.ros1_msg",
    "ros_parser.ros2_msg",
    "ros_parser.message_path",
]
# Auto-generated lark runtime does `from . import __version__`, which transitively
# pulls every subpackage via ros_parser/__init__.py re-exports. Break that chain.
ignore_imports = [
    "ros_parser._lark_standalone_runtime -> ros_parser",
]

[[tool.importlinter.contracts]]
name = "digitalis layers"
type = "layers"
containers = ["digitalis"]
layers = [
    "screens",
    "ui",
    "reader",
]

[tool.ruff]
required-version = ">=0.8.0"
line-length = 100

src = ['src']

target-version = 'py310'


[tool.ruff.lint]
exclude = ['msgs']
select = ['ALL']

ignore = [
    'ANN401',  # dynamically-typed-expression
    'C901',    # complex-structure
    'D',       # pydocstyle
    'EM101',   # raw-string-in-exception
    'EM102',   # f-string-in-exception
    'FIX002',  # TODO
    'PLR2004', # MagicValueComparisons
    'S101',    # AssertUsed
    'TD',      # TODO
    'TID252',  # relative-imports (allow relative imports from parent modules)
    'TRY003',  # raise-vanilla-args

    # formatter
    'COM812', # missing-trailing-comma
    'ISC001', # single-line-implicit-string-concatenation

    # TODO: reduce this
    'FBT001',
    'FBT002',
    'A002',
    'FBT003',
    'ERA001',
    'LOG015',
    'G004',
    'DTZ006',
    'PLR0',
    'PERF203',
]


[tool.ruff.lint.per-file-ignores]
# Relaxed lints for test files
"*/tests/*" = ["T201", "SLF001", "ANN", "PTH123", "S603", "S607"]
"*/benchmarks/*" = ["T201", "INP001", "PLC0415", "PTH123"]
"*/examples/*" = ["T201", "INP001", "BLE001"]
# Typer commands - function call in defaults is required pattern
"*/cmd/*_cmd.py" = ["B008", "B904", "TC003"]
