[project]
name = "robotic-tools"
version = "0.1.0"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "import-linter>=2.11",
    "jsonschema-gentypes>=2.13.0",
    "portable-ffmpeg>=0.2.0",
    "pyinstrument>=5.1.2",
    "pytest>=9.1.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "ty>=0.0.49",
]


[tool.uv.workspace]
members = [
    "digitalis",
    "mcap-codec-support",
    "mcap-ros2-support-fast",
    "pointcloud2",
    "pureini",
    "pymcap-cli",
    "small-mcap",
    "websocket-proxy",
    "robo-ws-bridge",
    "ros-parser",
]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
exclude = [
    "**/tests/",
    "**/example/",
    "**/data/",
    "**/_standalone*.py",
    "**/_lark_standalone*.py",
]

[tool.ty.analysis]
# `compression.zstd` is the Python 3.14 stdlib zstd module; on the 3.10 target it's
# unresolvable, but runtime falls back to the `zstandard` package via try/except.
allowed-unresolved-imports = [
    "lz4",
    "lz4.frame",
    "lz4.block",
    "av",
    "foxglove",
    "DracoPy",
    "compression",
]

[tool.ty.terminal]
error-on-warning = true

# ty can't narrow ClassVar-based discriminated unions (step.type == ActionType.X)
[[tool.ty.overrides]]
include = [
    "mcap-ros2-support-fast/src/mcap_ros2_support_fast/_dynamic_decoder.py",
    "mcap-ros2-support-fast/src/mcap_ros2_support_fast/_dynamic_encoder.py",
    "mcap-ros2-support-fast/src/mcap_ros2_support_fast/_planner.py",
]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

# av (PyAV) has incomplete type stubs
[[tool.ty.overrides]]
include = [
    "mcap-codec-support/src/mcap_codec_support/video/compression.py",
    "mcap-codec-support/src/mcap_codec_support/video/factories.py",
    "mcap-codec-support/src/mcap_codec_support/video/ffmpeg.py",
    "mcap-codec-support/src/mcap_codec_support/video/pyav.py",
    "pymcap-cli/src/pymcap_cli/cmd/rosdecompress_cmd.py",
    "pymcap-cli/src/pymcap_cli/cmd/roscompress_cmd.py",
    "pymcap-cli/src/pymcap_cli/exporters/video_file_writer.py",
]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
call-non-callable = "ignore"
invalid-argument-type = "ignore"


[tool.coverage.run]
omit = [
    # Auto-generated Lark parser runtime (~2154 stmts)
    "ros-parser/src/ros_parser/_lark_standalone_runtime.py",
    # Auto-generated TypedDicts from JSON schema
    "pymcap-cli/src/pymcap_cli/types/info_types.py",
]

[tool.importlinter]
# The contracts guard runtime coupling; `if TYPE_CHECKING:` imports are
# annotation-only and don't require the target package at runtime.
exclude_type_checking_imports = true
include_external_packages = true
root_packages = [
    "digitalis",
    "mcap_codec_support",
    "mcap_ros2_support_fast",
    "pointcloud2",
    "pureini",
    "pymcap_cli",
    "robo_ws_bridge",
    "ros_parser",
    "small_mcap",
]

[[tool.importlinter.contracts]]
name = "Workspace boundaries"
type = "independence"
modules = [
    "digitalis",
    "mcap_codec_support",
    "mcap_ros2_support_fast",
    "pointcloud2",
    "pureini",
    "pymcap_cli",
    "robo_ws_bridge",
    "ros_parser",
    "small_mcap",
]
unmatched_ignore_imports_alerting = "none"
# `**` matches one+ components, so each allowed edge needs both bare and `.**` forms.
ignore_imports = [
    # ros_parser is whitelisted at the submodule level — `ros1_msg` and the
    # private `_utils` / `_lark_standalone_runtime` stay off-limits.
    "mcap_ros2_support_fast._planner -> ros_parser",
    "mcap_ros2_support_fast._planner -> ros_parser.models",
    "mcap_ros2_support_fast._planner -> ros_parser.ros2_msg",
    "mcap_codec_support.decoders -> mcap_ros2_support_fast.decoder",
    "mcap_codec_support.pointcloud.factories -> mcap_ros2_support_fast.decoder",
    "mcap_codec_support.video.factories -> mcap_ros2_support_fast.decoder",
    "mcap_codec_support.pointcloud.factories -> small_mcap",
    "mcap_codec_support.video.compression -> small_mcap",
    "mcap_codec_support.video.factories -> small_mcap",
    "mcap_codec_support.pointcloud.compression -> pureini",
    "mcap_codec_support.pointcloud.factories -> pureini",
    "mcap_codec_support.pointcloud._messages -> pointcloud2",
    "mcap_codec_support.pointcloud.compression -> pointcloud2",
    "mcap_codec_support.pointcloud.factories -> pointcloud2",
    "mcap_codec_support.pointcloud.preprocess -> pointcloud2",
    "pymcap_cli.** -> small_mcap",
    "pymcap_cli.** -> small_mcap.**",
    "pymcap_cli.** -> mcap_codec_support",
    "pymcap_cli.** -> mcap_codec_support.**",
    "pymcap_cli.** -> mcap_ros2_support_fast",
    "pymcap_cli.** -> mcap_ros2_support_fast.**",
    "pymcap_cli.** -> ros_parser",
    "pymcap_cli.** -> ros_parser.models",
    "pymcap_cli.** -> ros_parser.message_path",
    "pymcap_cli.** -> ros_parser.ros2_msg",
    "pymcap_cli.** -> robo_ws_bridge",
    "pymcap_cli.** -> robo_ws_bridge.**",
    "digitalis.reader.mcap.source -> small_mcap",
    "digitalis.reader.websocket.source -> small_mcap",
    "digitalis.reader.mcap.source -> mcap_ros2_support_fast.decoder",
    "digitalis.reader.websocket.source -> mcap_ros2_support_fast.decoder",
    "digitalis.transforms -> ros_parser.message_path",
    "digitalis.ui.panels.plot -> ros_parser.message_path",
    "digitalis.ui.panels.raw -> ros_parser.message_path",
    "digitalis.ui.panels.pointcloud -> pointcloud2",
    "digitalis.reader.websocket -> robo_ws_bridge.ws_types",
    "digitalis.reader.websocket.source -> robo_ws_bridge",
    "digitalis.reader.websocket.source -> robo_ws_bridge.ws_types",
]

[[tool.importlinter.contracts]]
name = "pymcap_cli layers"
type = "layers"
containers = ["pymcap_cli"]
layers = [
    "cli",
    "cmd",
    "exporters",
    "core",
    "display",
    "encoding | types | rosbag_reader",
]
# `core` sits above `display` because core.mcap_transform uses display.osc_utils.
# These render helpers legitimately consume core domain types the other way, so the
# two edges can't both be satisfied by ordering; whitelist the render-side imports.
ignore_imports = [
    "pymcap_cli.display.tf_render -> pymcap_cli.core.tf_tree",
    "pymcap_cli.display.tf_render -> pymcap_cli.core.tf_findings",
    "pymcap_cli.display.diag_render -> pymcap_cli.core.diagnostics",
]

[[tool.importlinter.contracts]]
name = "mcap_codec_support features independent"
type = "independence"
modules = [
    "mcap_codec_support.video",
    "mcap_codec_support.pointcloud",
]

[[tool.importlinter.contracts]]
name = "mcap_codec_support optional dependencies stay in feature modules"
type = "forbidden"
source_modules = ["mcap_codec_support"]
forbidden_modules = [
    "av",
    "DracoPy",
    "mcap_ros2_support_fast",
    "numpy",
    "PIL",
    "pointcloud2",
    "pureini",
]
allow_indirect_imports = true
ignore_imports = [
    "mcap_codec_support.decoders -> mcap_ros2_support_fast.decoder",
    "mcap_codec_support.pointcloud.compression -> numpy",
    "mcap_codec_support.pointcloud.compression -> DracoPy",
    "mcap_codec_support.pointcloud.compression -> pointcloud2",
    "mcap_codec_support.pointcloud.compression -> pureini",
    "mcap_codec_support.pointcloud.factories -> numpy",
    "mcap_codec_support.pointcloud.factories -> DracoPy",
    "mcap_codec_support.pointcloud.factories -> mcap_ros2_support_fast.decoder",
    "mcap_codec_support.pointcloud.factories -> pointcloud2",
    "mcap_codec_support.pointcloud.factories -> pureini",
    "mcap_codec_support.pointcloud.preprocess -> numpy",
    "mcap_codec_support.pointcloud.preprocess -> pointcloud2",
    "mcap_codec_support.video.common -> numpy",
    "mcap_codec_support.video.compression -> numpy",
    "mcap_codec_support.video.compression -> av",
    "mcap_codec_support.video.pyav -> av",
    "mcap_codec_support.video.factories -> mcap_ros2_support_fast.decoder",
    "mcap_codec_support.video.common -> PIL",
    "mcap_codec_support.video.compression -> PIL",
]

[[tool.importlinter.contracts]]
name = "Codec support imports are owned by codec adapters"
type = "protected"
protected_modules = ["mcap_codec_support"]
allowed_importers = [
    "pymcap_cli.cmd.bridge._playback_transforms",
    "pymcap_cli.cmd.bridge._proxy_transforms",
    "pymcap_cli.cmd.bridge.proxy",
    "pymcap_cli.cmd.process_cmd",
    "pymcap_cli.cmd.roscompress_cmd",
    "pymcap_cli.cmd.rosdecompress_cmd",
    "pymcap_cli.cmd.video_cmd",
    "pymcap_cli.core.processors.decompress",
    "pymcap_cli.core.processors.image_compress",
    "pymcap_cli.core.processors.pointcloud_clean",
    "pymcap_cli.core.processors.pointcloud_compress",
    "pymcap_cli.core.processors.video_compress",
    "pymcap_cli.exporters.parquet_exporter",
    "pymcap_cli.exporters.pcd_exporter",
    "pymcap_cli.exporters.video_exporter",
    "pymcap_cli.exporters.video_file_writer",
]

[[tool.importlinter.contracts]]
name = "NumPy imports are owned by numeric feature packages"
type = "protected"
protected_modules = ["numpy"]
allowed_importers = [
    "digitalis",
    "mcap_codec_support",
    "mcap_ros2_support_fast._dynamic_encoder",
    "pointcloud2",
    "pureini",
    "pymcap_cli.exporters.parquet_exporter",
    "pymcap_cli.exporters.pcd_exporter",
]

[[tool.importlinter.contracts]]
name = "Media dependency imports are owned by media adapters"
type = "protected"
protected_modules = ["av", "DracoPy", "PIL"]
allowed_importers = [
    "digitalis.ui.panels.image",
    "mcap_codec_support.pointcloud",
    "mcap_codec_support.video",
    "pymcap_cli.exporters.image_exporter",
    "pymcap_cli.exporters.video_file_writer",
]

[[tool.importlinter.contracts]]
name = "Data export imports are owned by their exporters"
type = "protected"
protected_modules = ["plotly", "pyarrow"]
allowed_importers = [
    "pymcap_cli.encoding.arrow_schema",
    "pymcap_cli.exporters.parquet_exporter",
    "pymcap_cli.exporters.plot_exporter",
]

[[tool.importlinter.contracts]]
name = "Stable hash imports are owned by hash features"
type = "protected"
protected_modules = ["xxhash"]
allowed_importers = [
    "pymcap_cli.core.mcap_compare",
    "pymcap_cli.core.processors.dedup",
    "pymcap_cli.index",
]

[[tool.importlinter.contracts]]
name = "Bridge imports are owned by bridge features"
type = "protected"
protected_modules = ["robo_ws_bridge"]
allowed_importers = [
    "digitalis.reader.websocket",
    "pymcap_cli.cmd.bridge",
]

[[tool.importlinter.contracts]]
name = "Compression backend imports are owned by compression features"
type = "protected"
protected_modules = ["lz4", "zstandard"]
allowed_importers = [
    "pureini.decoder",
    "pureini.encoder",
    "pymcap_cli.doctor",
    "pymcap_cli.rosbag_reader._reader",
    "small_mcap.reader",
    "small_mcap.writer",
]

[[tool.importlinter.contracts]]
name = "Numba imports are owned by compiled numeric features"
type = "protected"
protected_modules = ["numba"]
allowed_importers = [
    "mcap_codec_support.pointcloud.preprocess",
    "pureini",
]

[[tool.importlinter.contracts]]
name = "ros_parser features independent"
type = "independence"
modules = [
    "ros_parser.ros1_msg",
    "ros_parser.ros2_msg",
    "ros_parser.message_path",
]
# Auto-generated lark runtime does `from . import __version__`, which transitively
# pulls every subpackage via ros_parser/__init__.py re-exports. Break that chain.
ignore_imports = [
    "ros_parser._lark_standalone_runtime -> ros_parser",
]

[[tool.importlinter.contracts]]
name = "digitalis layers"
type = "layers"
containers = ["digitalis"]
layers = [
    "screens",
    "ui",
    "reader",
]

[tool.ruff]
required-version = ">=0.8.0"
line-length = 100

src = ['src']

target-version = 'py310'


[tool.ruff.lint]
exclude = ['msgs']
select = ['ALL']

ignore = [
    'ANN401',  # dynamically-typed-expression
    'C901',    # complex-structure
    'D',       # pydocstyle
    'EM101',   # raw-string-in-exception
    'EM102',   # f-string-in-exception
    'FIX002',  # TODO
    'PLR2004', # MagicValueComparisons
    'S101',    # AssertUsed
    'TD',      # TODO
    'TID252',  # relative-imports (allow relative imports from parent modules)
    'TRY003',  # raise-vanilla-args

    # formatter
    'COM812', # missing-trailing-comma
    'ISC001', # single-line-implicit-string-concatenation

    # TODO: reduce this
    'FBT001',
    'FBT002',
    'A002',
    'FBT003',
    'ERA001',
    'LOG015',
    'G004',
    'DTZ006',
    'PLR0',
    'PERF203',
]


[tool.ruff.lint.per-file-ignores]
# Relaxed lints for test files
"*/tests/*" = ["T201", "SLF001", "ANN", "PTH123", "S603", "S607"]
"*/benchmarks/*" = ["T201", "INP001", "PLC0415", "PTH123"]
"*/examples/*" = ["T201", "INP001", "BLE001"]
# Typer commands - function call in defaults is required pattern
"*/cmd/*_cmd.py" = ["B008", "B904", "TC003"]
