[project]
name = "digitalis"
version = "0.6.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cachetools>=6.1.0",
    "lark>=1.2.2",
    "mcap>=1.3.0",
    "mcap-ros2-support>=0.5.5",
    "pointcloud2>=0.2.3",
    "textual>=5.1.1",
    "textual-image>=0.8.3",
    "textual-slider>=0.2.0",
    # only available on mac arm
    "textual-speedups>=0.2.0 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "typing-extensions>=4.14.1",
    "websockets>=15.0.1",
]

[project.scripts]
digitalis = "digitalis.app:main"

[build-system]
requires = ["uv_build>=0.8.1,<0.9.0"]
build-backend = "uv_build"


[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "textual-dev>=1.7.0",
    "ty>=0.0.1a19",
]

[tool.ty.rules]
invalid-assignment = "ignore" # causes issues with reactive
