[project]
name = "digitalis"
version = "0.6.0"
description = "Terminal-based visualization tool for robotics development"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "Marko Bausch"}
]
keywords = ["mcap", "robotics", "ros", "ros2", "visualization", "tui", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
dependencies = [
    "lark>=1.2.2",
    "mcap-ros2-support-fast",
    "pointcloud2>=0.2.3",
    "ros-parser",
    "small-mcap[compression]",
    "textual>=5.1.1",
    "textual-image>=0.8.3",
    "textual-slider>=0.2.0",
    # only available on mac arm
    "textual-speedups>=0.2.0 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "typing-extensions>=4.14.1",
    "websocket-bridge",
    "websockets>=15.0.1",
]

[project.urls]
Homepage = "https://github.com/mrkbac/robotic-tools"
Repository = "https://github.com/mrkbac/robotic-tools"
Issues = "https://github.com/mrkbac/robotic-tools/issues"

[project.scripts]
digitalis = "digitalis.app:main"

[build-system]
requires = ["uv_build>=0.8.1,<0.9.0"]
build-backend = "uv_build"


[dependency-groups]
dev = [
    "textual-dev>=1.7.0",
]

[tool.ty.rules]
invalid-assignment = "ignore" # causes issues with reactive

[tool.uv.sources]
mcap-ros2-support-fast = { workspace = true }
ros-parser = { workspace = true }
small-mcap = { workspace = true }
websocket-bridge = { workspace = true }
