[project]
name = "mcap-codec-support"
version = "0.13.0"
description = "Reusable MCAP encoder and decoder factories for robotics codecs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0" }
authors = [{ name = "Marko Bausch" }]
keywords = ["mcap", "robotics", "factories", "video", "pointcloud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "small-mcap",
    "typing-extensions>=4.15.0",
]

[project.urls]
Homepage = "https://github.com/mrkbac/robotic-tools"
Repository = "https://github.com/mrkbac/robotic-tools"
Issues = "https://github.com/mrkbac/robotic-tools/issues"

[project.optional-dependencies]
ros2 = ["mcap-ros2-support-fast"]
video = [
    "av>=12.0.0",
    "mcap-ros2-support-fast",
    "numpy>=1.24.0",
    "nvidia-nvjpeg==13.0.0.40 ; platform_machine == 'aarch64' and sys_platform == 'linux'",
    "pillow>=10.0",
]
pointcloud = ["mcap-ros2-support-fast", "pureini", "numpy>=1.24.0", "pointcloud2"]
all = ["mcap-codec-support[ros2,video,pointcloud,draco]"]
draco = [
    "dracopy>=1.7.0",
    "mcap-ros2-support-fast",
    "numpy>=1.24.0",
    "pointcloud2",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mcap-ros2-support-fast",
    "small-mcap",
    "pytest>=8.4.2",
]

[tool.uv.sources]
small-mcap = { workspace = true }
pureini = { workspace = true }
pointcloud2 = { workspace = true }
mcap-ros2-support-fast = { workspace = true }
