[project]
name = "mcap-ros2-support-fast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ros-parser",
]

[build-system]
requires = ["uv_build>=0.8.1,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "small-mcap",
    "mcap-ros2-support>=0.5.5",
]

[tool.uv.sources]
small-mcap = { workspace = true }
ros-parser = { workspace = true }
