[project]
name = "mcap-ros2-support-fast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ros-parser",
]

[build-system]
requires = ["uv_build>=0.8.1,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "small-mcap",
    "mcap-ros2-support>=0.5.5",
    "rosbags>=0.11.0",
    "pytest-benchmark>=5.1.0",
    "pybag-sdk>=0.6.0",
]

[tool.uv.sources]
small-mcap = { workspace = true }
ros-parser = { workspace = true }

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
