[project]
name = "mcap-ros2-support-fast"
version = "0.2.0"
description = "High-performance pure Python ROS2 message serialization and deserialization for MCAP files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "Marko Bausch"}
]
keywords = ["mcap", "ros2", "cdr", "serialization", "deserialization", "robotics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "ros-parser",
]

[project.urls]
Homepage = "https://github.com/mrkbac/robotic-tools"
Repository = "https://github.com/mrkbac/robotic-tools"
Issues = "https://github.com/mrkbac/robotic-tools/issues"

[build-system]
requires = ["uv_build>=0.8.1,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "small-mcap",
    "mcap-ros2-support>=0.5.5",
    "rosbags>=0.11.0",
    "pytest-benchmark>=5.1.0",
    "pybag-sdk>=0.6.0",
]

[tool.uv.sources]
small-mcap = { workspace = true }
ros-parser = { workspace = true }

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
