[project]
name = "pointcloud2"
description = "PointCloud2 lib for non ROS environments"
authors = [
    { name = "Marko Bausch", email = "60338487+mrkbac@users.noreply.github.com" },
]
dependencies = ["numpy>1"]
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

version = "0.2.3"

[project.urls]
Source = "https://github.com/mrkbac/robotic-tools"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"
