[project]
name = "pureini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marko Bausch", email = "60338487+mrkbac@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "lz4>=4.4.4",
    "numba>=0.62.1",
    "numpy>=2.2.0",
    "pyyaml>=6.0.3",
    "zstandard>=0.25.0",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
