[project]
name = "pymcap-cli"
version = "0.1.0"
description = "A CLI tool for slicing and dicing MCAP files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=14.1.0",
    "small-mcap[compression]",
    "mcap-ros2-support-fast",
    "typer>=0.9.0",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
pymcap-cli = "pymcap_cli.cli:app"


[dependency-groups]
dev = [
    "mcap>=1.3.0",
]

[tool.uv.sources]
small-mcap = { workspace = true }
mcap-ros2-support-fast = { workspace = true }
