[project]
name = "pymcap-cli"
version = "0.1.0"
description = "High-performance Python CLI for MCAP file processing with advanced recovery, filtering, and optimization capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "Marko Bausch"}
]
keywords = ["mcap", "cli", "robotics", "ros", "ros2", "recovery", "filtering", "compression"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "rich>=14.1.0",
    "small-mcap[compression]",
    "mcap-ros2-support-fast",
    "cyclopts>=4",
    "ros-parser",
    "platformdirs>=4.0.0",
    "typing-extensions>=4.15.0",
]

[project.urls]
Homepage = "https://github.com/mrkbac/robotic-tools"
Repository = "https://github.com/mrkbac/robotic-tools"
Issues = "https://github.com/mrkbac/robotic-tools/issues"

[project.optional-dependencies]
video = ["av>=12.0.0", "numpy>=1.24.0"]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
pymcap-cli = "pymcap_cli.cli:main"


[tool.uv.sources]
small-mcap = { workspace = true }
mcap-ros2-support-fast = { workspace = true }
ros-parser = { workspace = true }
