[project]
name = "robo-ws-bridge"
version = "0.2.0"
description = "Python library implementing the Foxglove WebSocket protocol for streaming robotics data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "Marko Bausch"}
]
keywords = ["websocket", "foxglove", "robotics", "ros", "ros2", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "typing-extensions>=4.15.0",
    "websockets>=15.0.1",
]

[project.urls]
Homepage = "https://github.com/mrkbac/robotic-tools"
Repository = "https://github.com/mrkbac/robotic-tools"
Issues = "https://github.com/mrkbac/robotic-tools/issues"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"
