[project]
name = "ros-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "lark>=1.3.0",
]

[tool.mypy]
strict = true
python_version = "3.10"
exclude = ["^src/ros_parser/_standalone_parser\\.py$"]

[tool.ruff]
extend = "../pyproject.toml"
extend-exclude = [
    'src/ros_parser/_standalone_parser.py',
    'tests/reference_parser.py',
]
